examples/test/testpolicy1541.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1541
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key18: value11
      key28: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value6
          key12: value18
          key47: value22
      podSelector:
        matchLabels:
          key34: value33
